--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Mi primera pagina web</title>
+         <!-- Enlace al archivo CSS externo -->
+         <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1>Pagina creada con chatGPT</h1>
