--- a/index.html
+++ b/index.html
@@ -2,12 +2,54 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mi primera pagina web</title>
-         <!-- Enlace al archivo CSS externo -->
-         <link rel="stylesheet" href="estilos.css">
+    <title>Programacion | @josecodetech</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Pagina creada con chatGPT</h1>
-    <p>Esta pagina ha sido creada con chatGPT sin saber programar.</p>
+
+    <header>
+        <img src="img/logo.jpg" alt="Logo de la empresa"> <!-- Ruta de la imagen -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="acerca.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Contenedor principal -->
+    <div class="main-content">
+                <!-- Contenido principal -->
+                <section class="content">
+                    <h2>Lorem Ipsum - Texto de relleno ficticio</h2>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis fringilla est, sed volutpat ipsum ullamcorper quis. Fusce hendrerit, magna vitae dictum fringilla, odio metus convallis est, vitae dignissim purus urna ut turpis...</p>
+                    
+                    <p>Phasellus convallis sapien quis magna iaculis, at ullamcorper orci dapibus. Sed et dictum lorem. Donec nec ante nisi. Mauris id molestie risus. Fusce convallis orci sed convallis elementum. In hac habitasse platea dictumst...</p>
+                    <p>Aenean id tortor vel nisi cursus efficitur. Phasellus tincidunt id dolor vel convallis. Sed quis neque tincidunt, sollicitudin urna vitae, convallis nulla. Donec auctor eleifend tortor ut faucibus. Fusce ac libero vitae ligula congue pharetra. Proin semper ligula vitae dolor tincidunt, non ultricies nulla facilisis. Sed placerat enim at sapien tincidunt, non placerat massa fermentum. Duis in nisi bibendum, malesuada nisl at, lacinia mi. Integer auctor nibh non pharetra ullamcorper. Duis auctor ante in libero convallis condimentum. Ut sit amet vestibulum erat, in eleifend orci. Aliquam eu justo eget nulla sollicitudin feugiat non id elit. Nulla facilisi. Praesent nec consequat dolor, nec tempor ipsum.</p>                    
+                    <p>Aenean id tortor vel nisi cursus efficitur. Phasellus tincidunt id dolor vel convallis. Sed quis neque tincidunt, sollicitudin urna vitae, convallis nulla. Donec auctor eleifend tortor ut faucibus. Fusce ac libero vitae ligula congue pharetra. Proin semper ligula vitae dolor tincidunt, non ultricies nulla facilisis. Sed placerat enim at sapien tincidunt, non placerat massa fermentum. Duis in nisi bibendum, malesuada nisl at, lacinia mi. Integer auctor nibh non pharetra ullamcorper. Duis auctor ante in libero convallis condimentum. Ut sit amet vestibulum erat, in eleifend orci. Aliquam eu justo eget nulla sollicitudin feugiat non id elit. Nulla facilisi. Praesent nec consequat dolor, nec tempor ipsum.</p>                   
+                    <p>Aenean id tortor vel nisi cursus efficitur. Phasellus tincidunt id dolor vel convallis. Sed quis neque tincidunt, sollicitudin urna vitae, convallis nulla. Donec auctor eleifend tortor ut faucibus. Fusce ac libero vitae ligula congue pharetra. Proin semper ligula vitae dolor tincidunt, non ultricies nulla facilisis. Sed placerat enim at sapien tincidunt, non placerat massa fermentum. Duis in nisi bibendum, malesuada nisl at, lacinia mi. Integer auctor nibh non pharetra ullamcorper. Duis auctor ante in libero convallis condimentum. Ut sit amet vestibulum erat, in eleifend orci. Aliquam eu justo eget nulla sollicitudin feugiat non id elit. Nulla facilisi. Praesent nec consequat dolor, nec tempor ipsum.</p>                    
+                    <p>Aenean id tortor vel nisi cursus efficitur. Phasellus tincidunt id dolor vel convallis. Sed quis neque tincidunt, sollicitudin urna vitae, convallis nulla. Donec auctor eleifend tortor ut faucibus. Fusce ac libero vitae ligula congue pharetra. Proin semper ligula vitae dolor tincidunt, non ultricies nulla facilisis. Sed placerat enim at sapien tincidunt, non placerat massa fermentum. Duis in nisi bibendum, malesuada nisl at, lacinia mi. Integer auctor nibh non pharetra ullamcorper. Duis auctor ante in libero convallis condimentum. Ut sit amet vestibulum erat, in eleifend orci. Aliquam eu justo eget nulla sollicitudin feugiat non id elit. Nulla facilisi. Praesent nec consequat dolor, nec tempor ipsum.</p>                  
+                    <p>Aenean id tortor vel nisi cursus efficitur. Phasellus tincidunt id dolor vel convallis. Sed quis neque tincidunt, sollicitudin urna vitae, convallis nulla. Donec auctor eleifend tortor ut faucibus. Fusce ac libero vitae ligula congue pharetra. Proin semper ligula vitae dolor tincidunt, non ultricies nulla facilisis. Sed placerat enim at sapien tincidunt, non placerat massa fermentum. Duis in nisi bibendum, malesuada nisl at, lacinia mi. Integer auctor nibh non pharetra ullamcorper. Duis auctor ante in libero convallis condimentum. Ut sit amet vestibulum erat, in eleifend orci. Aliquam eu justo eget nulla sollicitudin feugiat non id elit. Nulla facilisi. Praesent nec consequat dolor, nec tempor ipsum.</p>                   
+                 </section>
+                 
+
+                    <!-- Barra lateral -->
+        <aside class="sidebar">
+            <h2>Barra lateral</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque vitae turpis sed efficitur.</p>
+        </aside>
+
+
+    </div>
+
+    <!-- Pie de página -->
+    <footer class="footer">
+        <p>&copy; 2023 Nombre de tu sitio web</p>
+    </footer>
+
 </body>
 </html>
